--- a/index.html
+++ b/index.html
@@ -1,1 +1,11 @@
-Hello World
+<!DOCTYPE html>
+<html>
+<head>
+	<meta charset="utf-8">
+	<title>Hello People</title>
+</head>
+<body>
+	<h1>Hello World</h1>
+	<h2>I am so glad to publish my first website :D</h2>
+</body>
+</html>
