added github icon

--- a/myPortfolio.html
+++ b/myPortfolio.html
@@ -163,10 +163,10 @@
 		    		<ul class="menu simple">
 		      			<li><a href="https://www.facebook.com/rabih.aoun.9"><i class="fab fa-facebook-f fa-3x" aria-hidden="true"></i></a></li>
 		      			<li><a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a></li>
-		      			<li><a href="https://www.linkedin.com/in/rabih-aoun
-"><i class="fab fa-linkedin-in fa-3x" aria-hidden="true"></i></a></li>
+		      			<li><a href="https://www.linkedin.com/in/rabih-aoun"><i class="fab fa-linkedin-in fa-3x" aria-hidden="true"></i></a></li>
 		      			<li><a href="https://twitter.com/?lang=en"><i class="fab fa-twitter fa-3x" aria-hidden="true"></i></a></li>
 		      			<li><a href="https://www.freecodecamp.org/rjaoun"><i class="fab fa-free-code-camp fa-3x" aria-hidden="true"></i></a></li>
+		      			<li><a href="https://github.com/rjaoun"><i class="fab fa-github fa-3x"></i></a></li>
 		    		</ul>
 		  		</div>
 			</div>
