--- a/index.html
+++ b/index.html
@@ -167,6 +167,7 @@
 "><i class="fab fa-linkedin-in fa-3x" aria-hidden="true"></i></a></li>
 		      			<li><a href="https://twitter.com/?lang=en"><i class="fab fa-twitter fa-3x" aria-hidden="true"></i></a></li>
 		      			<li><a href="https://www.freecodecamp.org/rjaoun"><i class="fab fa-free-code-camp fa-3x" aria-hidden="true"></i></a></li>
+		      			<li><a href="https://github.com/rjaoun"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a></li>
 		    		</ul>
 		  		</div>
 			</div>
