--- a/index.html
+++ b/index.html
@@ -1,183 +1,1 @@
-<!DOCTYPE html>
-<html>
-<head lang="en">
-	<meta charset="utf-8">
-	<title>My Portfolio</title>
-	<link rel="stylesheet" type="text/css" href="scss/MyPortfolio.css">
-	<link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.6.3/css/all.css" integrity="sha384-UHRtZLI+pbxtHCWp1t77Bi1L4ZtiqrqD80Kn4Z8NTSRyMA2Fd33n5dQ8lWUE00s/" crossorigin="anonymous">
-	<link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.7.0/animate.min.css">
-	<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.3.1/jquery.min.js"></script>
-</head>
-<body>
-	<header>
-		<nav>
-			<div class="wrapper">
-			<div class="topnav">
-				<a id="logo" href="MyPortfolio.html"><img src="scss/images/logo.png" id="logo-image"></a>
-				<div class="topnav-right">
-					<a href="MyPortfolio.html"><i class="fas fa-home"></i>Home</a>
-					<a href="#projects"><i class="fas fa-code"></i>Projects</a>
-					<a href="#about"><i class="fas fa-info-circle"></i>About</a>
-					<a href="#contact"><i class="fas fa-book-open"></i>Contact</a>
-				</div>
-			</div>
-		</div>
-		</nav>
-	</header>	
-	<main id="main">
-		<div class="wrapper">
-			<img src="scss/images/logo.png">
-			<h1>
-				Hello, I'm Rabih Aoun.
-			</h1>
-			<h1>
-				I am a front-end Developer.
-			</h1>
-			<div id="link-me">
-				<a href="#about">Learn More</a>
-				<a href="#contact">One Hour Consult</a>
-			</div>	
-		</div>
-	</main>
-	
-
-
-	<section id="projects">
-		<div class="wrapper">
-			<h2>Projects</h2>
-			<div id="grid-display">
-				<div class="project" onclick="" id="proj-A">
-					<div class="child project-A">
-						<!-- href="javascript:;" will link nowhere. -->
-						<a href="javascript:;" class="link-caption">Riverside Health center</a>
-					</div>
-				</div>
-				<div class="project right" onclick="" id="proj-B">
-					<div class="child project-B">
-						<a href="javascript:;" class="link-caption">Food Panda</a>
-					</div>
-				</div>
-				<div class="project" onclick="" id="proj-C">
-					<div class="child project-C" >
-						<a href="javascript:;" class="link-caption">Survey Form</a>
-					</div>
-				</div>
-				<div class="project right" onclick="" id="proj-D">
-					<div class="child project-D">
-						<a href="javascript:;" class="link-caption">CRUD pages</a>
-					</div>
-				</div>
-			</div>
-		</div>
-	</section>
-
-	<section id="about">
-		<div class="wrapper">
-			<h2>About</h2>
-			<div id="about-grid">
-				<img src="scss/images/ray.jpg" id="about-pic">
-				<p id="about-me">I am a front-end developer who cares deeply about creating world-class, useful and beautiful websites that help people make a difference.</p>
-				<div id="accessible-icon">
-					<i class="fab fa-accessible-icon fa-5x icon-design"></i>
-					<h3>Accessibility</h3>
-				</div>
-				<div id="responsive-icon">
-					<i class="fas fa-mobile-alt fa-5x icon-design"></i>
-					<h3>Responsive</h3>
-				</div>	
-				<div id="code-icon">
-					<i class="far fa-file-code fa-5x icon-design"></i>
-					<h3>HTML/CSS/JavaScript</h3>
-				</div>
-				<div id="debug-icon">
-					<i class="fas fa-wrench fa-5x icon-design"></i>
-					<h3>Testing/Debugging</h3>
-				</div>												
-			</div>
-		</div>
-	</section>
-
-	<section id="contact">
-		<div class="wrapper" id="mid-grid">
-			<form action="#" method="post" id="contact-form">
-				<div id="contact-content">
-					<h2>Contact Me for consultation </h2>
-					<div>
-						<div>
-							<label for="name">Name:</label>
-						</div>
-						<div>	
-							<input type="text" id="name" name="Name" placeholder="Enter your name" class="resize">
-						</div>
-					</div>
-
-					<div>
-						<div>
-							<label for="email">E-mail:</label>
-						</div>
-						<div>
-							<input type="email" id="email" name="Email" placeholder="Enter your email" class="resize">
-						</div>
-					</div>
-					
-					<div>
-						<div>
-							<label for="project-type">Project Type:</label>
-						</div>
-						<div>
-							<input type="text" id="project-type" name="project type" placeholder="Enter project Type" class="resize">
-						</div>
-					</div>
-
-					<div>
-						<div>
-							<label for="message">Message:</label>
-						</div>
-						<div>	
-							<textarea id="message" name="Message" placeholder="message" cols="90" rows="10" class="resize"></textarea>
-						</div>
-					</div>
-
-					<div>
-						<input type="submit" value="submit" id="submit">
-					</div>										
-				</div>
-			</form>
-		</div>
-	</section>
-	<footer>
-		<div class="wrapper">
-			<div class="social-footer">
-		  		<div class="social-footer-left">
-		    		<p id="footer-text">RABIH AOUN &copy;
-		    			<script language="JavaScript" type="text/javascript">
-    						now = new Date
-    							theYear=now.getYear()
-    						if (theYear < 1900)
-    						theYear=theYear+1900
-    						document.write(theYear)
-						</script>
-					</p>
-		  		</div>
-		  		<div class="social-footer-icons">
-		    		<ul class="menu simple">
-		      			<li><a href="https://www.facebook.com/rabih.aoun.9"><i class="fab fa-facebook-f fa-3x" aria-hidden="true"></i></a></li>
-		      			<li><a href="https://www.instagram.com/?hl=en"><i class="fab fa-instagram fa-3x" aria-hidden="true"></i></a></li>
-		      			<li><a href="https://www.linkedin.com/in/rabih-aoun
-"><i class="fab fa-linkedin-in fa-3x" aria-hidden="true"></i></a></li>
-		      			<li><a href="https://twitter.com/?lang=en"><i class="fab fa-twitter fa-3x" aria-hidden="true"></i></a></li>
-		      			<li><a href="https://www.freecodecamp.org/rjaoun"><i class="fab fa-free-code-camp fa-3x" aria-hidden="true"></i></a></li>
-		      			<li><a href="https://github.com/rjaoun"><i class="fab fa-github fa-3x" aria-hidden="true"></i></a></li>
-		    		</ul>
-		  		</div>
-			</div>
-		</div>
-	</footer>
-
-	<div id="back-to-top">	
-		<a href="#top"><i class="far fa-arrow-alt-circle-up fa-3x"></i></a>
-	</div>	
-	<script type="text/javascript" src="JS/MyPortfolio.js"></script>
-</body>
-</html>
-
+Hello World
