--- a/index.html
+++ b/index.html
@@ -1,4 +1,3 @@
-Hello Rabih
 <!DOCTYPE html>
 <html>
 <head>
@@ -15,6 +14,7 @@ Hello Rabih
 
 <body class="container" style="padding-left: 0px;
 padding-right: 0px; margin: 0 auto; width: 1200px;">
+  <h1>Service You need</h1>
 <!-- header.php -->
 <?php require_once($_SERVER['DOCUMENT_ROOT'] . '/project-merj-2019/body/header.php'); ?>
 
